--- a/.env.example
+++ b/.env.example
@@ -2,7 +2,6 @@ COMPANY_NAME="Vercel Inc."
 TWITTER_CREATOR="@vercel"
 TWITTER_SITE="https://nextjs.org/commerce"
 SITE_NAME="Next.js Commerce"
-SHOPIFY_REVALIDATION_SECRET="9b13d3e8-8eb5-484a-8458-2e5b0c1cafbb"
-SHOPIFY_STOREFRONT_ACCESS_TOKEN="cb48bad0acb1a969bc625d2843c8f6bc"
-SHOPIFY_STORE_DOMAIN="homex-exceloid-test.myshopify.com"
-BACKEND_LIBRARY="Cwcommerce"
+SHOPIFY_REVALIDATION_SECRET=
+SHOPIFY_STOREFRONT_ACCESS_TOKEN=
+SHOPIFY_STORE_DOMAIN=
