added products that display on the UI and display individual product

--- a/package.json
+++ b/package.json
@@ -24,11 +24,13 @@
   "dependencies": {
     "@headlessui/react": "^1.7.17",
     "@heroicons/react": "^2.0.18",
+    "axios": "^1.6.3",
     "clsx": "^2.0.0",
     "geist": "^1.0.0",
     "next": "14.0.0",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "typesense": "^1.7.2"
   },
   "devDependencies": {
     "@tailwindcss/container-queries": "^0.1.1",
