added navbar, subHeader, carousel, about, store preview shop by category

--- a/package.json
+++ b/package.json
@@ -22,14 +22,22 @@
     "*": "prettier --write --ignore-unknown"
   },
   "dependencies": {
+    "@ant-design/nextjs-registry": "^1.0.0",
+    "@fortawesome/fontawesome-svg-core": "^6.5.1",
+    "@fortawesome/free-solid-svg-icons": "^6.5.1",
+    "@fortawesome/react-fontawesome": "^0.2.0",
     "@headlessui/react": "^1.7.17",
     "@heroicons/react": "^2.0.18",
+    "antd": "^5.12.8",
     "axios": "^1.6.3",
     "clsx": "^2.0.0",
     "geist": "^1.0.0",
     "next": "14.0.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-icons": "^4.12.0",
+    "react-slick": "^0.29.0",
+    "slick-carousel": "^1.8.1",
     "typesense": "^1.7.2"
   },
   "devDependencies": {
